--- a/css/visual-form-builder-admin.css
+++ b/css/visual-form-builder-admin.css
@@ -335,6 +335,32 @@
 				text-align: right;
 			}
 
+	.vfb-sortable-placeholder{
+		display:block;
+		height:35px;
+		width:400px;
+		margin:8px;
+		border:1px dashed #bbb;
+		background-color:#f5f5f5;
+	}
+	
+	#vfb-main .vfb-sortable-placeholder{
+		float:left;
+		margin:8px;
+		height:200px;
+		width:210px;
+	}
+	
+		.rtl #vfb-main .vfb-sortable-placeholder {
+			float: right;
+		}
+	
+	#vfb-menu-to-edit .mjs-nestedSortable-error{
+		border-color:red;
+		background-color:#fbe3e4;
+		color:#8a1f11;
+	}
+	
 /* !New Form box */
 #new-form{
 	margin:8px 0;
