--- a/css/visual-form-builder.css
+++ b/css/visual-form-builder.css
@@ -1,41 +1,65 @@
 form.visual-form-builder{
 	font-family:inherit;
 	margin:20px 0;
+	background: none;
 	list-style:none;
+	list-style-image: none;
+	list-style-type: none;
+	position: relative;
 }
 
 form.visual-form-builder li{
 	width:auto !important;
-	list-style:none;
+	background: none;
+	list-style: none;
+	list-style-image: none;
+	list-style-type: none;
 }
 
-.visual-form-builder ul{
-	list-style:none;
+/* !Remove list item styles */
+.visual-form-builder ul,
+.entry-content .visual-form-builder ul,
+.comment-content .visual-form-builder ul,
+.mu_register .visual-form-builder ul {
+	background: none;
+	list-style: none;
+	list-style-image: none;
+	list-style-type: none;
 	margin:0 14px;
 	padding:0;
 	font-size:12px;
 }
 	
-	.visual-form-builder ul li{
+	.visual-form-builder ui li {
+		background: none;
 		list-style: none;
+		list-style-image: none;
+		list-style-type: none;
 	}
 	
-	.visual-form-builder li{
-		list-style:none;
-		clear:both;
-		margin:0;
-		padding:6px 1% 9px;
-		width:64%;
+	.visual-form-builder li,
+	.entry-content .visual-form-builder li,
+	.comment-content .visual-form-builder li,
+	.mu_register .visual-form-builder li {
+		background: none;
+		list-style: none;
+		list-style-image: none;
+		list-style-type: none;
+		clear: both;
+		margin: 0;
+		padding: 6px 1% 9px;
+		width: 64%;
 	}
 	
 .visual-form-builder li div span,
 span.vfb-full input,
+span.vfb-full input[type="text"].vfb-medium,
 span.vfb-full select{
 	display:block;
 	float:left;
 	width:100%;
 }
-
+			
 	.visual-form-builder span.vfb-left{
 		float:left;
 		width:48%;
@@ -47,22 +71,31 @@ span.vfb-full select{
 	}
 
 .visual-form-builder span.vfb-right input,
+.visual-form-builder span.vfb-right input[type="text"],
 .visual-form-builder span.vfb-right select,
 .visual-form-builder span.vfb-left input,
+.visual-form-builder span.vfb-left input[type="text"],
 .visual-form-builder span.vfb-left select{
 	width:100%;
 }
 
+/* !Time Field */
 .visual-form-builder span.vfb-time{
 	float:left;
 	margin:0 0.3em 0 0;
 }
+
+	.rtl .visual-form-builder span.vfb-time {
+		float: right;
+		margin: 0 0 0 0.3em;
+	}
 
 .visual-form-builder li div label,
 .visual-form-builder li span label{
 	font-size:90%;
 }
 
+/* !Fieldset */
 .visual-form-builder fieldset{
 	background-color:#eeeeee;
 	border-radius:3px;
@@ -71,6 +104,7 @@ span.vfb-full select{
 	clear:both;
 }
 
+/* !Legend */
 .visual-form-builder .vfb-legend{
 	margin:5px 14px;
 	padding:0 6px;
@@ -86,6 +120,7 @@ span.vfb-full select{
 		padding:0;
 	}
 
+/* !Description */
 .visual-form-builder label,
 label.vfb-desc{
 	display:block;
@@ -93,7 +128,10 @@ label.vfb-desc{
 	padding-bottom:3px;
 	color:#000;
 }
-
+	label.vfb-desc{
+		font-weight:bold;
+	}
+	
 	.visual-form-builder.left-label .vfb-desc,
 	.visual-form-builder.right-label .vfb-desc{
 		float:left;
@@ -112,43 +150,78 @@ label.vfb-desc{
 		width: 65%;
 	}
 
-label.vfb-desc{
-	font-weight:bold;
-}
+	.visual-form-builder label.vfb-choice{
+		font-size:100%;
+		line-height:150%;
+		margin:-16px 0 0 23px;
+		padding:0 0 5px;
+		width:88%;
+	}
+	
+		.rtl .visual-form-builder label.vfb-choice {
+			margin: -16px 23px 0 0;
+		}
+	
+	.visual-form-builder label span{
+		color:#BC1212;
+	}
 
-.visual-form-builder label.vfb-choice{
-	font-size:100%;
-	line-height:150%;
-	margin:-17px 0 0 23px;
-	padding:0 0 5px;
-	width:88%;
-}
-
-.visual-form-builder label span{
-	color:#BC1212;
-	vertical-align:middle;
+/* !Input, Textarea, and Select */
+input.vfb-text,
+input[type="text"].vfb-text,
+input[type="tel"].vfb-text,
+input[type="email"].vfb-text,
+input[type="url"].vfb-text,
+textarea.vfb-textarea {
+	background: none repeat scroll 0 0 #FAFAFA;
+    border: 1px solid #DDDDDD;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1) inset;
+    border-radius: 3px;
+    padding: 3px 0;
 }
 
 input.vfb-text,
+input[type="text"].vfb-text,
+input[type="tel"].vfb-text,
+input[type="email"].vfb-text,
+input[type="url"].vfb-text,
 textarea.vfb-textarea,
-select.vfb-select{
+select.vfb-select {
 	font-size:100%;
 	font-family:inherit;
-	margin:0;
+	line-height: normal;
+	height: auto;
+	color: #373737;
+	margin: 0 0 5px 0;
+}
+
+select.vfb-select{
 	padding:2px 0;
 }
 
 input.vfb-small,
+input[type="text"].vfb-small,
+input[type="tel"].vfb-small,
+input[type="email"].vfb-small,
+input[type="url"].vfb-small,
 select.vfb-small{
 	width:25%;
 }
 
 input.vfb-medium,
+input[type="text"].vfb-medium,
+input[type="tel"].vfb-medium,
+input[type="email"].vfb-medium,
+input[type="url"].vfb-medium,
 select.vfb-medium{
 	width:50%;
 }
 
 input.vfb-large,
+input[type="text"].vfb-large,
+input[type="tel"].vfb-large,
+input[type="email"].vfb-large,
+input[type="url"].vfb-large,
 select.vfb-large,
 textarea.vfb-textarea{
 	width:100%;
@@ -166,19 +239,30 @@ textarea.vfb-large{
 	height:20em;
 }
 
-.vfb-submit{
-	color:black;
+/* !Submit Button */
+.vfb-submit,
+input[type="submit"].vfb-submit {
 	font-size:1.1em;
 }
 
+/* !Checkbox and Radio */
 input.vfb-checkbox,
-input.vfb-radio{
+input[type="checkbox"].vfb-checkbox,
+input.vfb-radio,
+input[type="radio"].vfb-radio {
 	font-size:1.1em;
 	display:block;
 	height:13px;
 	width:13px;
 	margin:4px 0 0;
 }
+
+input.vfb-other,
+input[type="text"].vfb-other {
+    margin: 0 0 8px 25px;
+}
+
+/* !Field Layout */
 .visual-form-builder li.vfb-two-column div span,
 .visual-form-builder li.vfb-three-column div span,
 .visual-form-builder li.vfb-auto-column div span{
@@ -230,16 +314,31 @@ input.vfb-radio{
 	width:64% !important;
 }
 
-li.vfb-left-half .vfb-small, li.vfb-left-half .vfb-medium, li.vfb-left-half .vfb-large,
-li.vfb-right-half .vfb-small, li.vfb-right-half .vfb-medium, li.vfb-right-half .vfb-large,
-li.vfb-left-third .vfb-small, li.vfb-left-third .vfb-medium, li.vfb-left-third .vfb-large,
-li.vfb-middle-third .vfb-small, li.vfb-middle-third .vfb-medium, li.vfb-middle-third .vfb-large,
-li.vfb-right-third .vfb-small, li.vfb-right-third .vfb-medium, li.vfb-right-third .vfb-large,
-.visual-form-builder li.vfb-left-two-thirds .vfb-small, .visual-form-builder li.vfb-left-two-thirds .vfb-medium, .visual-form-builder li.vfb-left-two-thirds .vfb-large,
-.visual-form-builder li.vfb-right-two-thirds .vfb-small, .visual-form-builder li.vfb-right-two-thirds .vfb-medium, .visual-form-builder li.vfb-right-two-thirds .vfb-large{
+li.vfb-left-half .vfb-small,
+li.vfb-left-half .vfb-medium,
+li.vfb-left-half .vfb-large,
+li.vfb-right-half .vfb-small,
+li.vfb-right-half .vfb-medium,
+li.vfb-right-half .vfb-large,
+li.vfb-left-third .vfb-small,
+li.vfb-left-third .vfb-medium,
+li.vfb-left-third .vfb-large,
+li.vfb-middle-third .vfb-small,
+li.vfb-middle-third .vfb-medium,
+li.vfb-middle-third .vfb-large,
+li.vfb-right-third .vfb-small,
+li.vfb-right-third .vfb-medium,
+li.vfb-right-third .vfb-large,
+.visual-form-builder li.vfb-left-two-thirds .vfb-small,
+.visual-form-builder li.vfb-left-two-thirds .vfb-medium,
+.visual-form-builder li.vfb-left-two-thirds .vfb-large,
+.visual-form-builder li.vfb-right-two-thirds .vfb-small,
+.visual-form-builder li.vfb-right-two-thirds .vfb-medium,
+.visual-form-builder li.vfb-right-two-thirds .vfb-large{
 	width:100%;
 }
 
+/* !Error */
 label.error{
 	color:red;
 	font-weight:bold;
@@ -252,6 +351,7 @@ textarea.error{
 	border:1px solid red;
 }
 
+/* !Success Mesage - Default */
 p#form_success{
 	color:green;
 	font-weight:bold;
@@ -261,6 +361,8 @@ p#form_success{
 	display: none;
 	font-size:12px;
 }
+
+/* !HTML Quicktags */
 .ed_button{
 	font-family:Arial,"Bitstream Vera Sans",Helvetica,Verdana,sans-serif;
 	font-size:12px;
@@ -295,11 +397,25 @@ p#form_success{
 		text-decoration:line-through;
 	}
 
+/* !Instructions */
 .vfb-item-instructions{
 	background-color:#e3e3e3;
 	border-radius:3px;
 }
 
+	.vfb-item-instructions ul,
+	.vfb-item-instructions ul li {
+		list-style: disc;
+		padding-bottom: 0;
+	}
+	
+	.vfb-item-instructions ol,
+	.vfb-item-instructions ol li{
+		list-style: decimal;
+		padding-bottom: 0;
+	}
+	
+/* !Sections */
 .vfb-section-div{
 	 background-color:#D4D4D4;
 	 border-radius:3px;
@@ -308,12 +424,13 @@ p#form_success{
 	 float:left;
 	 width:97%;
 }
-	.vfb-section-div h4{
+	.visual-form-builder .vfb-section-div h4{
 		font-size:16px;
 		border-bottom:1px solid #BABABA;
 		margin:0;
 	}
-	
+
+/* !Clearing */
 .vfb-clear{
 	clear:both;
 	display:block;
@@ -321,4 +438,9 @@ p#form_success{
 	width:0;
 	overflow:hidden;
 	visibility:hidden;
+}
+
+/* !Conditional Field */
+.vfb-conditional-hide{
+	display: none;
 }
