--- a/css/visual-form-builder-admin.css
+++ b/css/visual-form-builder-admin.css
@@ -1,24 +1,117 @@
 /* VFB Pro call to action */
 .vfb-pro-call-to-action {
-    background-color: #3d93cd;
-    border: 5px solid #b0d2e8;
-    border-radius: 7px;
-    box-shadow: inset 1px 1px 5px #398cc3, inset -1px -25px 5px #398cc3, 0px 0 0 #fff;
-    height: 37px;
-    margin: 0 auto;
-    padding: 5px 30px 10px 30px;
-    text-shadow: 0 1px #2b658c;
-    width: 115px;
-    line-height: 22px;
+	padding: 5px 0;
+	text-align: center;
 }
 
-	.vfb-pro-call-to-action a {
-	    text-decoration: none;
+	.vfb-btn {
+		display: inline-block;
+		*display: inline;
+		/* IE7 inline-block hack */
+		
+		*zoom: 1;
+		padding: 14px 24px;
+		margin-bottom: 0;
+		line-height: 20px;
+		text-align: center;
+		vertical-align: middle;
+		cursor: pointer;
+		color: #333333;
+		font-size: 21px;
+		font-weight: 500;
+		text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+		background-color: #f5f5f5;
+		background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
+		background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
+		background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
+		background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
+		background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
+		background-repeat: repeat-x;
+		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
+		border-color: #e6e6e6 #e6e6e6 #bfbfbf;
+		border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+		*background-color: #e6e6e6;
+		/* Darken IE7 buttons by default so they stand out more given they won't have borders */
+		
+		filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+		border: 1px solid #cccccc;
+		*border: 0;
+		border-bottom-color: #b3b3b3;
+		-webkit-border-radius: 6px;
+		-moz-border-radius: 6px;
+		border-radius: 6px;
+		*margin-left: .3em;
+		-webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+		-moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+		box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+		text-decoration: none;
 	}
 	
-		.vfb-pro-call-to-action:hover {
-		    border-color: #dbf1ff;
+		.vfb-btn:hover,
+		.vfb-btn:focus {
+			color: #333333;
+			text-decoration: none;
+			background-position: 0 -15px;
+			-webkit-transition: background-position 0.1s linear;
+			-moz-transition: background-position 0.1s linear;
+			-o-transition: background-position 0.1s linear;
+			transition: background-position 0.1s linear;
 		}
+		
+		.vfb-btn:focus {
+			outline: thin dotted #333;
+			outline: 5px auto -webkit-focus-ring-color;
+			outline-offset: -2px;
+		}
+		
+		.vfb-btn.active,
+		.vfb-btn:active {
+			background-image: none;
+			outline: 0;
+			-webkit-box-shadow: inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05);
+			-moz-box-shadow: inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05);
+			box-shadow: inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05);
+		}
+	
+
+	.vfb-btn-primary.active {
+		color: rgba(255, 255, 255, 0.75);
+	}
+	
+	.vfb-btn-primary {
+		color: #ffffff;
+		text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+		background-color: #006dcc;
+		background-image: -moz-linear-gradient(top, #0088cc, #0044cc);
+		background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));
+		background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);
+		background-image: -o-linear-gradient(top, #0088cc, #0044cc);
+		background-image: linear-gradient(to bottom, #0088cc, #0044cc);
+		background-repeat: repeat-x;
+		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0044cc', GradientType=0);
+		border-color: #0044cc #0044cc #002a80;
+		border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+		*background-color: #0044cc;
+		/* Darken IE7 buttons by default so they stand out more given they won't have borders */
+		
+		filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+	}
+	
+	.vfb-btn-primary:hover,
+	.vfb-btn-primary:focus,
+	.vfb-btn-primary:active,
+	.vfb-btn-primary.active,
+	.vfb-btn-primary.disabled,
+	.vfb-btn-primary[disabled] {
+		color: #ffffff;
+		background-color: #0044cc;
+		*background-color: #003bb3;
+	}
+	
+	.vfb-btn-primary:active,
+	.vfb-btn-primary.active {
+		background-color: #003399 \9;
+	}
 
 	.vfb-pro-call-to-action .cta-sign-up {
 	    color: #fff;
@@ -57,6 +150,17 @@
 		.rtl .vfb-pro-upgrade {
 			float: right;
 		}
+		
+		.vfb-pro-upgrade h2 {
+			font-size: 20px;
+			font-weight: 500;
+			padding: 5px 0;
+			text-align: center;
+		}
+		
+			.vfb-pro-upgrade h2 a {
+				text-decoration: none;
+			}
 		
 		.vfb-pro-upgrade ul {
 		    list-style: outside;
