--- a/css/visual-form-builder.css
+++ b/css/visual-form-builder.css
@@ -194,6 +194,7 @@ textarea.vfb-textarea {
 	input[type="email"].vfb-text:focus,
 	input[type="url"].vfb-text:focus,
 	textarea.vfb-textarea:focus {
+		border-color: rgb(82, 168, 236);
 		border-color: rgba(82, 168, 236, 0.8);
 		outline: 0;
 		outline: thin dotted \9;
@@ -210,6 +211,7 @@ textarea.vfb-textarea {
 	input[type="email"].vfb-text.error:focus,
 	input[type="url"].vfb-text.error:focus,
 	textarea.vfb-textarea.error:focus {
+		border-color: rgb(238,83,83);
 		border-color: rgba(238,83,83,0.8);
 
 		-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(238,83,83,.6);
@@ -382,10 +384,18 @@ label.error{
 	font-size:90%;
 }
 
-input.error,
-select.error,
-textarea.error{
-	border:1px solid red;
+input.vfb-text.error,
+input[type="text"].vfb-text.error,
+input[type="tel"].vfb-text.error,
+input[type="email"].vfb-text.error,
+input[type="url"].vfb-text.error,
+textarea.vfb-textarea.error {
+	border-color: rgb(238,83,83);
+	border-color: rgba(238,83,83,0.8);
+
+	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(238,83,83,.6);
+	-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(238,83,83,.6);
+	box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(238,83,83,.6);
 }
 
 /* !Success Mesage - Default */
