--- a/css/visual-form-builder-admin.css
+++ b/css/visual-form-builder-admin.css
@@ -21,13 +21,7 @@
 		font-weight: 500;
 		text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
 		background-color: #f5f5f5;
-		background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
-		background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
-		background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
-		background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
-		background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
 		background-repeat: repeat-x;
-		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
 		border-color: #e6e6e6 #e6e6e6 #bfbfbf;
 		border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 		*background-color: #e6e6e6;
@@ -115,7 +109,6 @@
 
 	.vfb-btn-inverse {
 		background-color: #363636;
-		background-image: linear-gradient(to bottom, #444444, #222222);
 		background-repeat: repeat-x;
 		border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 		color: #FFFFFF;
@@ -734,32 +727,90 @@ strong .vfb-meta-entries-total span {
 		width: 390px;
 	}
 
-.addOption,
-.deleteOption,
-.addEmail,
-.deleteEmail,
-.addCondition,
-.deleteCondition {
-    background: url('../images/sprite.png?d=20120921') -12px -650px no-repeat transparent;
-    text-indent: -9999px;
-    width: 16px;
-    height: 16px;
-    display: inline-block;
-    overflow: hidden;
-    position: relative;
-    top: 4px;
+/* Interface icons */
+.vfb-interface-icon {
+	position: absolute;
+	top: 4px;
+	right: 4px;
+	display: inline-block;
+	width: 16px;
+	height: 16px;
+	background-color: transparent;
+	background-image: url('../images/vfb-interface-icons.png?d=20130713');
+	background-repeat: no-repeat;
+	text-indent: -9999px;
 }
 
-	.deleteOption,
-	.deleteEmail,
-	.deleteCondition {
-	    background-position: -12px -677px;
+	.vfb-interface-settings {		background-position: -32px 0;}
+	.vfb-interface-duplicate {		background-position: 0 0;}
+	.vfb-interface-trash {			background-position: -64px 0;}
+	.vfb-interface-conditional {	background-position: -224px 0;}
+	.vfb-interface-sort {			background-position: -128px 0;}
+	.vfb-interface-plus { 			background-position: -160px 0;}
+	.vfb-interface-minus { 			background-position: -192px 0;}
+	.vfb-interface-bulk-add {		background-position: -96px 0;}
+
+	.vfb-interface-plus,
+	.vfb-interface-minus {
+		top: 0;
 	}
 
+	/* Form Settings add/delete emails */
 	.addEmail,
 	.deleteEmail {
-	    margin-top: 5px;
+		top: 21px;
 	}
+		.addEmail {
+			right: 55px;
+		}
+
+			.rtl .addEmail {
+				right: auto;
+				left: 55px;
+			}
+
+		.deleteEmail {
+			right: 30px;
+		}
+
+			.rtl .deleteEmail {
+				right: auto;
+				left: 30px;
+			}
+
+	/* Form item delete/sort options */
+	.deleteOption,
+	.vfb-interface-sort,
+	.addCondition,
+	.deleteCondition {
+		top: 3px;
+	}
+
+		.deleteOption,
+		.addCondition {
+			right: 25px;
+		}
+
+			.rtl .deleteOption,
+			.rtl .addCondition {
+				right: auto;
+				left: 25px;
+			}
+
+		.vfb-interface-sort,
+		.deleteCondition {
+			right: 0;
+		}
+
+			.rtl .vfb-interface-sort,
+			.rtl .deleteCondition {
+				right: auto;
+				left: 0;
+			}
+
+			.vfb-interface-sort:hover {
+				cursor: pointer;
+			}
 
 	.ui-state-disabled .menu-item-handle{
 		background: #dfdfdf;
@@ -767,6 +818,15 @@ strong .vfb-meta-entries-total span {
 		cursor:default;
 	}
 
+.option {
+	float: left;
+	width: 97%;
+	position: relative;
+}
+
+	.rtl .option {
+		float: right;
+	}
 
 #vfb-poststuff{
 	display:block;
@@ -1069,64 +1129,73 @@ ul.vfb-fields-col-2{
 	height:auto;
 }
 
-.vfb-draggable-form-items {
-    display: block;
-    text-align: left;
-    text-decoration: none;
-    padding: 4px 0 4px 34px;
-    margin-right: 8px;
-    position: relative;
-    border-radius: 3px;
-    color: #464646;
-    border: 1px solid #bbb;
-    position: relative;
-}
-.vfb-draggable-form-items:hover {
-    border-color: #aaa;
-}
-.vfb-draggable-form-items b {
-    background-image: url('../images/sprite.png?d=20120921');
-    background-repeat: no-repeat;
-    background-color: transparent;
-    display: inline-block;
-    position: absolute;
-    left: 8px;
-    width: 18px;
-    height: 16px;
-    line-height: 16px;
+.vfb-draggable-form-items{
+	position: relative;
+	position: relative;
+	display: block;
+	margin-right: 8px;
+	padding:4px 0 4px 34px;
+	border:1px solid #bbb;
+	border-radius: 3px;
+	color:#464646;
+	text-align: left;
+	text-decoration: none;
 }
 
-#form-element-address b {    	background-position: -10px -132px;	}
-#form-element-autocomplete b {  background-position: -10px -1029px;	}
-#form-element-checkbox b {		background-position: -10px -261px;	}
-#form-element-color b {		    background-position: -10px -885px;	}
-#form-element-creditcard b {	background-position: -10px -847px;	}
-#form-element-currency b {	    background-position: -10px -408px;	}
-#form-element-datepicker b {    background-position: -10px -218px;	}
-#form-element-digits b {	    background-position: -10px -454px;	}
-#form-element-email b {		    background-position: -10px -306px;	}
-#form-element-file b {		    background-position: -10px -590px;	}
-#form-element-hidden b {	    background-position: -10px -999px;	}
-#form-element-html b {		    background-position: -10px -562px;	}
-#form-element-instructions b {	background-position: -10px -623px;	}
-#form-element-ip b {		    background-position: -10px -923px;	}
-#form-element-matrix b {		background-position: -10px -1216px;	}
-#form-element-max b {		    background-position: -10px -1062px;	}
-#form-element-min b {		    background-position: -10px -1094px;	}
-#form-element-pagebreak b {	    background-position: -10px -1292px;	}
-#form-element-password b {	    background-position: -10px -964px;	}
-#form-element-phone b {		    background-position: -10px -532px;	}
-#form-element-radio b {		    background-position: -10px -53px;	}
-#form-element-range b {		    background-position: -10px -1186px;	}
-#form-element-section b {	    background-position: -10px -812px;	}
-#form-element-select b {	    background-position: -10px -10px;	}
-#form-element-slider b {	    background-position: -10px -1126px;	}
-#form-element-spinner b {	    background-position: -10px -1154px;	}
-#form-element-text b {		    background-position: -10px -91px;	}
-#form-element-textarea b {	    background-position: -10px -176px;	}
-#form-element-time b {		    background-position: -10px -493px;	}
-#form-element-username b {	    background-position: -10px -1255px;	}
-#form-element-url b {		    background-position: -10px -360px;	}
+	.rtl .vfb-draggable-form-items {
+		margin-right: 0;
+		margin-left: 8px;
+		padding: 4px 34px 4px 10px;
+	}
+
+	.vfb-draggable-form-items:hover{
+		border-color:#aaaaaa;
+	}
+
+	.vfb-draggable-form-items b{
+		position: absolute;
+		left:8px;
+		display: inline-block;
+		width:16px;
+		height:16px;
+		background-color: transparent;
+		background-image: url('../images/vfb-form-items.png?d=20130712');
+		background-repeat: no-repeat;
+		line-height: 16px;
+	}
+
+		.rtl .vfb-draggable-form-items b {
+			left: auto;
+			right: 8px;
+		}
+
+	#form-element-address b{		background-position: -128px 0;}
+	#form-element-autocomplete b{	background-position: -384px 0;}
+	#form-element-checkbox b{		background-position: -672px 0;}
+	#form-element-color b{			background-position: 0 0;}
+	#form-element-currency b{		background-position: -64px 0;}
+	#form-element-datepicker b{		background-position: -224px 0;}
+	#form-element-digits b{			background-position: -832px 0;}
+	#form-element-email b{			background-position: -160px 0;}
+	#form-element-file b{			background-position: -512px 0;}
+	#form-element-hidden b{			background-position: -544px 0;}
+	#form-element-html b{			background-position: -800px 0;}
+	#form-element-instructions b{	background-position: -256px 0;}
+	#form-element-ip b{				background-position: -448px 0;}
+	#form-element-max b{			background-position: -576px 0;}
+	#form-element-min b{			background-position: -608px 0;}
+	#form-element-name b{			background-position: -320px 0;}
+	#form-element-pagebreak b{		background-position: -768px 0;}
+	#form-element-password b{		background-position: -352px 0;}
+	#form-element-phone b{			background-position: -96px 0;}
+	#form-element-radio b{			background-position: -704px 0;}
+	#form-element-range b{			background-position: -640px 0;}
+	#form-element-select b{			background-position: -416px 0;}
+	#form-element-text b{			background-position: -736px 0;}
+	#form-element-textarea b{		background-position: -32px 0;}
+	#form-element-time b{			background-position: -192px 0;}
+	#form-element-username b{		background-position: -288px 0;}
+	#form-element-url b{			background-position: -480px 0;}
 
 .static-vars-inactive{
 	display:none;
@@ -1149,7 +1218,6 @@ ul.vfb-fields-col-2{
     background-color: #f5f5f5;
     color: #333;
     text-decoration: none;
-    text-shadow: 1px 1px 0 #fff;
     white-space: nowrap;
     font:12px/normal sans-serif;
     cursor: pointer;
@@ -1163,16 +1231,14 @@ ul.vfb-fields-col-2{
 	.vfb-button:hover,
 	.vfb-button:active,
 	.vfb-button.current {
-	    border-color: #3072b3;
-	    border-bottom-color: #2a65a0;
-	    background-color: #3072b3;
-	    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#599bdc), to(#3072b3));
-	    background-image: -moz-linear-gradient(#599bdc, #3072b3);
-	    background-image: -o-linear-gradient(#599bdc, #3072b3);
-	    background-image: linear-gradient(#599bdc, #3072b3);
-	    color: #fff;
-	    text-decoration: none;
-	    text-shadow: 0 -1px 0 rgba(0,0,0,0.3);
+	    border-color: #929292;
+	    border-bottom-color: #929292;
+	    background-color: #eeeeee;
+	    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#eeeeee), to(#cccccc));
+	    background-image: -moz-linear-gradient(#eeeeee, #cccccc);
+	    background-image: -o-linear-gradient(#eeeeee, #cccccc);
+	    background-image: linear-gradient(#eeeeee, #cccccc);
+	    color: #000;
 	}
 
 	.vfb-button.current{
@@ -1184,66 +1250,29 @@ ul.vfb-fields-col-2{
 	    border: 0;
 	}
 
-	.vfb-button.vfb-delete {
-	    color: #900;
+	.vfb-button.vfb-settings:hover,
+	.vfb-button.vfb-settings:focus,
+	.vfb-button.vfb-settings:active {
+		color: #3072b3;
 	}
 
 	.vfb-button.vfb-delete:hover,
 	.vfb-button.vfb-delete:focus,
 	.vfb-button.vfb-delete:active {
-	    border-color: #b53f3a;
-	    border-bottom-color: #a0302a;
-	    background-color: #dc5f59;
-	    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#dc5f59), to(#b33630));
-	    background-image: -moz-linear-gradient(#dc5f59, #b33630);
-	    background-image: -o-linear-gradient(#dc5f59, #b33630);
-	    background-image: linear-gradient(#dc5f59, #b33630);
-	    color: #fff;
+		color: #900;
 	}
-
-		.vfb-button.vfb-delete:focus,
-		.vfb-button.vfb-delete:active {
-			text-shadow: none;
-		}
 
 	.vfb-button.vfb-duplicate:hover,
 	.vfb-button.vfb-duplicate:focus,
 	.vfb-button.vfb-duplicate:active {
-	    border-color: #008e0d;
-	    border-bottom-color: #008e0d;
-	    border-left-color: #82BA0B;
-	    border-radius: 0;
-	    background-color: #82BA0B;
-	    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#7cbc0a), to(#82BA0B));
-	    background-image: -moz-linear-gradient(#7cbc0a, #82BA0B);
-	    background-image: -o-linear-gradient(#7cbc0a, #82BA0B);
-	    background-image: linear-gradient(#7cbc0a, #82BA0B);
-	    color: #fff;
+		color: #008e0d;
 	}
-
-		.vfb-button.vfb-duplicate:focus,
-		.vfb-button.vfb-duplicate:active {
-			text-shadow: none;
-		}
 
 	.vfb-button.vfb-conditional-fields:hover,
 	.vfb-button.vfb-conditional-fields:focus,
 	.vfb-button.vfb-conditional-fields:active {
-	    border-color: #929292;
-	    border-bottom-color: #929292;
-	    background-color: #eeeeee;
-	    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#eeeeee), to(#cccccc));
-	    background-image: -moz-linear-gradient(#eeeeee, #cccccc);
-	    background-image: -o-linear-gradient(#eeeeee, #cccccc);
-	    background-image: linear-gradient(#eeeeee, #cccccc);
-	    color: #000000;
-	    text-shadow: 1px 0px 0px rgba(255,255,255,1);
-	}
 
-		.vfb-button.vfb-conditional-fields:focus,
-		.vfb-button.vfb-conditional-fields:active {
-			text-shadow: none;
-		}
+	}
 
 	.vfb-button-group{
 		display:inline-block;
@@ -1270,39 +1299,38 @@ ul.vfb-fields-col-2{
 		margin-top: 2px;
 	}
 
-	.button-icon{
-		position:absolute;
-		top:0;
-		right:3px;
-		width:16px;
-		height:24px;
+	.vfb-item-actions{
+		margin-right: 10px;
+		margin-bottom: 10px;
+		text-align: center;
 	}
 
-	.button-icon.vfb-small-arrow{
-		background:url('../images/arrows.png?d=20130703') no-repeat scroll 0px 4px transparent;
-	}
-
-		/* Blue Admin style */
-		.admin-color-classic .button-icon.vfb-small-arrow {
-			background: url('../images/arrows-vs.png?d=20130703') no-repeat scroll 0 4px transparent;
+		.rtl .vfb-item-actions {
+			margin-right: 0;
+			margin-left: 10px;
 		}
 
-	.current .button-icon.vfb-small-arrow{
-		background:url('../images/arrows.png?d=20130703') no-repeat scroll 0px -31px transparent;
-	}
-
-		/* Blue Admin style */
-		.admin-color-classic .current .button-icon.vfb-small-arrow {
-			background: url('../images/arrows-vs.png?d=20130703') no-repeat scroll 0 -31px transparent;
+		.vfb-item-actions .vfb-delete{
+			float:left;
 		}
 
-	.button-icon.plus {
-	    background: url('../images/sprite.png?d=20120921') no-repeat scroll -12px -644px transparent;
-	}
+			.rtl .vfb-item-actions .vfb-delete {
+				float: right;
+			}
 
-	.button-icon.delete {
-	    background: url('../images/sprite.png?d=20120921') no-repeat scroll -12px -671px transparent;
-	}
+		.vfb-item-actions .vfb-conditional-fields{
+			float:right;
+		}
+
+			.rtl .vfb-item-actions .vfb-conditional-fields {
+				float: left;
+			}
+
+		.vfb-item-actions .vfb-delete,
+		.vfb-item-actions .vfb-duplicate,
+		.vfb-item-actions .vfb-conditional-fields{
+			margin-top: 10px;
+		}
 
 #form-settings{
 	display:none;
@@ -1437,6 +1465,19 @@ ul.vfb-fields-col-2{
 		font-size:12px;
 	}
 
+/* !Bulk Add Options */
+.vfb-add-options-group {
+	display: inline-block;
+	margin: 10px 0;
+	list-style: none;
+	text-align: center;
+	width: 95%;
+}
+
+	.vfb-add-options-group .vfb-interface-plus {
+		top: 4px;
+	}
+
 /* !Import/Export */
 .vfb-export-label {
 	width: 10em;
@@ -1457,6 +1498,7 @@ ul.vfb-fields-col-2{
 	margin-left: 10em;
 	padding: 5px;
 }
+
 @media print {
     body * {
 	    float: none;
@@ -1550,4 +1592,101 @@ ul.vfb-fields-col-2{
 	tr textarea {
 	    overflow: visible;
 	}
+}
+
+/* !HiDPI Displays */
+@media print,
+  (-o-min-device-pixel-ratio: 5/4),
+  (-webkit-min-device-pixel-ratio: 1.25),
+  (min-resolution: 120dpi) {
+
+	/* Interface icons */
+	.vfb-interface-icon {
+		top: 5px;
+		background-image: url( '../images/vfb-interface-icons-2x.png?d=20130712' );
+		background-size: cover;
+	}
+
+	/* Form items */
+	.vfb-draggable-form-items b {
+		background-image: url( '../images/vfb-form-items-2x.png?d=20130712' );
+		background-size: cover;
+	}
+
+	.vfb-add-options-group .vfb-interface-plus {
+		top: 5px;
+	}
+
+	.addEmail,
+	.deleteEmail {
+		top: 22px;
+	}
+
+	/* Field Item arrows */
+	.item-edit {
+		background-image: url('../images/arrows-2x.png?d=20130611');
+		background-size: 15px 123px;
+	}
+
+		/* Blue Admin style */
+		.admin-color-classic .item-edit {
+			background-image: url('../images/arrows-vs-2x.png?d=20130611');
+			background-size: 15px 123px;
+		}
+
+		.item-edit:hover{
+			background-image: url('../images/arrows-dark-2x.png?d=20130611');
+			background-size: 15px 123px;
+		}
+
+			/* Blue Admin style */
+			.admin-color-classic .item-edit:hover {
+				background-image: url('../images/arrows-dark-vs-2x.png?d=20130611');
+				background-size: 15px 123px;
+			}
+
+		.item-edit.opened{
+			background-image: url('../images/arrows-2x.png?d=20130611');
+			background-size: 15px 123px;
+		}
+
+			/* Blue Admin style */
+			.admin-color-classic .item-edit.opened {
+				background-image: url('../images/arrows-vs-2x.png?d=20130611');
+				background-size: 15px 123px;
+			}
+
+		.item-edit.opened:hover{
+			background-image: url('../images/arrows-dark-2x.png?d=20130611');
+			background-size: 15px 123px;
+		}
+
+			/* Blue Admin style */
+			.admin-color-classic .item-edit.opened:hover {
+				background-image: url('../images/arrows-dark-vs-2x.png?d=20130611');
+				background-size: 15px 123px;
+			}
+
+	/* Form Settings arrow */
+	.button-icon.vfb-small-arrow{
+		background-image: url('../images/arrows-2x.png?d=20130611');
+		background-size: 15px 123px;
+	}
+
+		/* Blue Admin style */
+		.admin-color-classic .button-icon.vfb-small-arrow {
+			background-image: url('../images/arrows-vs-2x.png?d=20130611');
+			background-size: 15px 123px;
+		}
+
+	.current .button-icon.vfb-small-arrow{
+		background-image: url('../images/arrows-2x.png?d=20130611');
+		background-size: 15px 123px;
+	}
+
+		/* Blue Admin style */
+		.admin-color-classic .current .button-icon.vfb-small-arrow {
+			background-image: url('../images/arrows-vs.png?d=20130611');
+			background-size: 15px 123px;
+		}
 }
