--- a/css/visual-form-builder-admin.css
+++ b/css/visual-form-builder-admin.css
@@ -523,6 +523,7 @@ strong .vfb-meta-entries-total span {
 
 #post-body{
 	padding: 10px;
+	background: white;
 }
 
 /* !Form Editor columns */
@@ -636,12 +637,12 @@ strong .vfb-meta-entries-total span {
 /* !Field Item arrows */
 .item-edit {
 	position: absolute;
-	top: 0;
+	top: 3px;
 	right: -20px;
 	display: block;
 	overflow: hidden;
 	width:30px;
-	height: 36px;
+	height: 40px;
 	background:url('../images/arrows.png?d=20130703') no-repeat scroll 8px 10px transparent;
 	text-indent:-999em;
 }
@@ -872,21 +873,28 @@ label.error{
 	border:1px solid red;
 }
 
+#vfb-menu-to-edit .menu-item-settings {
+	width: 402px;
+}
+
 .vfb-menu-item-handle {
-	background: #f1f1f1;
-	box-shadow:0 1px 0 #f1f1f1 inset;
+	background: white;
 	border: 1px solid #DFDFDF;
 	border-radius: 3px;
 	height: auto;
 	line-height: 35px;
 	overflow: hidden;
-	padding-left: 10px;
+	padding: 10px 15px;
 	position: relative;
 	text-shadow: 0 1px 0 #FFFFFF;
-	width: 400px;
+	width: 382px;
 	word-wrap: break-word;
 	cursor: move;
 }
+
+	.vfb-menu-item-handle:hover {
+		border-color: #999;
+	}
 
 	/* Blue Admin style */
 	.admin-color-classic .vfb-menu-item-handle {
@@ -922,7 +930,6 @@ label.error{
 		font-weight: bold;
 		line-height: 20px;
 		margin-right: 13em;
-		padding: 7px 0;
 	}
 
 		.rtl .vfb-menu-item-handle .item-title {
@@ -1103,10 +1110,10 @@ ul#vfb-menu-to-edit ul{
 
 /* !Form Items */
 #form-items .tabs-panel{
-	overflow:visible;
-	padding:0.5em 0 0.5em 4px;
-	min-height:300px;
-	height:auto;
+	overflow: visible;
+	padding: 0.5em 0 0.5em 4px;
+	min-height: 325px;
+	height: auto;
 }
 
 	.rtl #form-items .tabs-panel {
@@ -1456,14 +1463,16 @@ ul.vfb-fields-col-2{
 		margin:5px 0;
 		padding:0 0 6px 0;
 		border-bottom:1px solid white;
-		font-weight:bold;
+		font-weight:normal;
 		font-size:13px;
 		font-family: sans-serif;
+		color: white;
 	}
 
 	.tooltip p{
 		margin-top:10px;
 		font-size:12px;
+		color: white;
 	}
 
 /* !Bulk Add Options */
